# homeos

./: .cursorrules  .dockerignore  .env.example  .gitignore  01_Context_HOMEOS.md  =1.0.9  =26.0  AETHERFLOW_APPLY_AUDIT.md  AGENTS.md  ANALYSIS_CONFRONTATION.md  DEEPSEEK.md  Dockerfile  GEMINI.md  GEMINI_CLI.md  LLAMA.md  MISSION_KIMI_COMPLETE.md  Modelfile_Qwen3  PROTOCOLE_EVALUATION.md  QWEN.md  README.md  REPO_MAP.md  ROADMAP.md  ROADMAP_ACHIEVED.md  RUN_KIMI_COMPLETE.sh  active_project.json  aether-r1.py  aetherflow  aetherflow-chat  aetherflow-hybrid  aetherflow-monitor  af  analyse_genome_kimi.md  backend.md  build_trace_poc.py  chat  chat_glm5.sh  code  collaboration_hub.md  component.html  component.js  (+45 more)
.claude/: settings.json
.claude-flow/: CAPABILITIES.md  config.yaml
.cursor/: plan_status.json
.idx/: dev.nix
.qwen/: settings.json  settings.json.orig
.venv_veille/: pyvenv.cfg
Backend/: .env.example  Dockerfile  README.md
Frontend/: PHASE_1_COMPLETE.md  README.md  README_OLD.md  arbiter-interface.html  arbiter-showcase.html  daisy-showcase.html  drilldown-sidebar.html  index.generated.html  index.html  interface_homeos.html  library-showcase.html  majordome-chat.html  studio.html  studio_index.html  sullivan-chat-widget.html  sullivan-super-widget.html  test-sullivan-widget.html
archive_svelte/: .env.generated.example  package-lock.json
docs/: 08-research-  ETAT_REPRISE.md  EXECUTIVE_SUMMARY.md  INSTALLATION.md  KIMI_MISSION_GENOME_INFERENCE.md  README.md  SULLIVAN_PERSONALITIES.md
exports/: manifest.json
frontend-svelte/: .env.example  package.json  svelte.config.js  vite.config.js
gemini_workspace/: RCLONE_CONFIG_INSTRUCTIONS.md
homeos/: README.md  __init__.py  cli.py
outputs/: step1.txt  step2.txt
plans/: test_22b_validation.json
sandbox_payloads/: README.md
scratch/: cleanup_templates.py
scripts/: README.md  README_BENCHMARK.md  af.py  archive_roadmap.py  audit_pre_review.py  benchmark.py  benchmark_comprehensive.py  (+53 more)
(+1523 files in other folders)
